Implementing requested changes

--- a/style.css
+++ b/style.css
@@ -1061,6 +1061,7 @@ header {
     align-items: center;
     gap: 20px;
     width: 100%;
+    justify-content: center;
   }
 
   .past-events .img1 {
